# HardDA

./: README.md  pyproject.toml
ad_design/: 05. Proxy_metrics_case.ipynb  05.HomeWork.ipynb  proxy_metrics_case_abtest.csv  proxy_metrics_case_data.csv  proxy_metrics_homework_3.csv
