[tool.poetry]
name = "ab-advanced"
version = "0.1.0"
description = ""
authors = ["lysenko <lysenko@tut.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.4.1"
pandas = "^2.3.3"
scipy = "^1.17.0"
matplotlib = "^3.10.8"
statsmodels = "^0.14.6"
seaborn = "^0.13.2"
notebook = "^7.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
